Sun May 13 12:27:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/High_Res_Timer.h:
          Fixed typo

        * ace/Basic_Stats.h:
        * ace/Basic_Stats.cpp:
        * ace/Throughput_Stats.h:
        * ace/Throughput_Stats.cpp:
          Introduced scale_factor_type traits to handle the fact that the
          ACE HighResTimer scale factor is now ACE_UINT64

        * ace/Timeprobe_T.cpp:
          Use correct trait for the scale factor

        * performance-tests/RPC/client.cpp:
        * performance-tests/SCTP/SOCK_SEQPACK_clt.cpp:
        * performance-tests/SCTP/SOCK_STREAM_clt.cpp:
        * performance-tests/Server_Concurrency/Latency_Stats.h:
        * performance-tests/TCP/tcp_test.cpp:
          Use ACE_High_Res_Timer::global_scale_factor_type

Sat May 12 11:11:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Time_Value.h:
        * ace/Time_Value.cpp:
          None of the windows compilers define ACE_LACKS_LONGLONG_T

        * ace/High_Res_Timer.h:
        * ace/High_Res_Timer.inl:
        * ace/High_Res_Timer.cpp:
          Integrated patches from bugzilla 3703 increasing the precision
          of the high resolution timers on windows

Sat May 12 11:03:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ASNMP/asnmp/transaction.cpp:
        * Kokyu/Dispatch_Deferrer.cpp:
          Compare return value of schedule_timer with -1

        * ace/OS_NS_time.h:
          None of the windows compilers define ACE_LACKS_LONGLONG_T

        * bin/PerlACE/TestTarget_WinCE.pm:
          Typo fix

Sat May 12 11:01:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          None of the windows compilers define ACE_LACKS_LONGLONG_T

Sat May 12 10:54:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Numeric_Limits.h:
          Fixed typo

Fri May 11 17:42:08 UTC 2012  Steve Huston  <shuston@riverace.com>
